@@ -25,6 +25,14 @@ S3method(as.data.table, data.table)
 S3method(as.data.table, data.frame)
 S3method(as.data.table, matrix)
 S3method(as.data.table, list)
+S3method(as.data.table, integer)
+S3method(as.data.table, numeric)
+S3method(as.data.table, character)
+S3method(as.data.table, logical)
+S3method(as.data.table, factor)
+S3method(as.data.table, ordered)
+S3method(as.data.table, Date)
+S3method(as.data.table, table)
 S3method(as.data.frame, data.table)
 S3method(as.list, data.table)
 S3method(as.matrix, data.table)
